Fix bug where attachment size wasn't visible when the filename was too long (#6033)
Uses flexbox, so works in recent browsers only. I don't plan to support olders.

--- a/skins/larry/styles.css
+++ b/skins/larry/styles.css
@@ -2979,6 +2979,20 @@ ul.toolbarmenu li span.copy {
 	background-position: -6px -378px;
 }
 
+.attachmentslist li a.filename {
+	display: flex;
+	overflow: hidden;
+}
+.attachmentslist li .attachment-name {
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.attachmentslist li .attachment-size {
+	padding: 0 .25em;
+}
+
+
 /*** fieldset tabs ***/
 
 .tabbed.ui-tabs {
